# ALVR

./: Cargo.toml
alvr/experiments/android-lib-no-ovr/: Cargo.toml  build.gradle  settings.gradle
alvr/experiments/android-lib-no-ovr/alvr-android-app-sample/: build.gradle
alvr/experiments/android-lib-no-ovr/alvr-android-app-sample/src/androidTest/java/io/github/alvr/android/app/: ExampleInstrumentedTest.kt
alvr/experiments/android-lib-no-ovr/alvr-android-app-sample/src/main/: AndroidManifest.xml
alvr/experiments/android-lib-no-ovr/alvr-android-app-sample/src/main/java/io/github/alvr/android/app/: DeviceAdapterImpl.kt  DeviceDataProducerImpl.kt  MainActivity.kt
alvr/experiments/android-lib-no-ovr/alvr-android-app-sample/src/main/res/values/: strings.xml  themes.xml
alvr/experiments/android-lib-no-ovr/alvr-android-app-sample/src/main/res/values-night/: themes.xml
alvr/experiments/android-lib-no-ovr/alvr-android-app-sample/src/test/java/io/github/alvr/android/app/: ExampleUnitTest.kt
alvr/experiments/android-lib-no-ovr/alvr-android-lib/: build.gradle
alvr/experiments/android-lib-no-ovr/alvr-android-lib/src/main/: AndroidManifest.xml
alvr/experiments/android-lib-no-ovr/gradle/wrapper/: gradle-wrapper.properties
alvr/experiments/android-lib-no-ovr/src/: audio.rs  buffer_queue.rs  common.rs  connection.rs  device.rs  fec.rs  frame_map.rs  jvm.rs  latency_controller.rs  legacy_packets.rs  legacy_stream.rs  lib.rs  logging_backend.rs  nal.rs  packet.rs  store.rs  unity.rs  util.rs
(+38 files in other folders)
