[package]
name = "alvr_android"
version = "0.1.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]

[dependencies]
alvr_common = { path = "../../common" }
alvr_session = { path = "../../session" }
alvr_sockets = { path = "../../sockets" }

jni = "0.19.0"

# Basic utilities
once_cell = "1.8"
parking_lot = "0.11"
# Serialization
bincode = "1.3"
serde = "1.0"
serde_json = "1.0"
settings-schema = { path = "../../settings-schema", features = [ "rename_camel_case" ] }
# Async and networking
bytes = "1.1"
futures = "0.3"
tokio = { version = "1.14", features = ["rt-multi-thread", "macros", "sync", "time"] }
# Miscellaneous
log = "0.4"
semver = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10"

[dev-dependencies]
simple_logger = "1.15"